# EPMS

./: .gitignore  AGENTS.md  CLEANUP_RECOMMENDATIONS.md  COMMANDS.md  DEAD_CODE.md  DEPLOYMENT.md  DUPLICATE_FILES.md  LICENSE  REPOSITORY_AUDIT.md  REQUIRED_FILES.md  STACK.md  TROUBLESHOOTING.md  UNUSED_FILES.md  build-release.ps1  start-epms-consolidated.bat
UNWANTED_FILES/epms-agent-client/: test-results.xml
UNWANTED_FILES/root-files/: EPMS_Agent.spec  EPMS_Client_Setup.sed  EPMS_Gateway.spec  dump.rdb  start-epms.bat  test_client.sed
activitywatch_Source code/: EPMS_Installation_Guide.md  RELEASE_NOTES.md
activitywatch_Source code/epms-agent-client/: Bundle.wxs  Product.wxs  Variables.wxi  epms-agent.spec  epms-agent.wixproj  pyproject.toml
activitywatch_Source code/epms-agent-client/epms_agent/: __init__.py  __main__.py  api_client.py  browser_monitor.py  config.py  editor_monitor.py  event_buffer.py  monitor.py  rest_client.py  systray.py
activitywatch_Source code/epms-agent-client/tests/: conftest.py  test_api_client.py  test_event_buffer.py  test_rest_client.py
activitywatch_Source code/epms-server-installer/: Bundle.wxs  CustomActions.wxs  Database.wxs  Firewall.wxs  Product.wxs  Services.wxs  UI.wxs  Variables.wxi  build-services.ps1  build.bat  epms-server.wixproj
dashboard/: AGENTS.md  CLAUDE.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
sandbox/: check_hash.py  heartbeat_simulator.py  run_sandbox.ps1  seed_data.py  server.err  start_server.cmd  start_server.ps1  test_all_endpoints.py
(+222 files in other folders)
