[project]
name = "epms-agent"
version = "1.0.0"
description = "EPMS Agent Client — Desktop monitoring agent for EPMS Enterprise Server"
authors = [{ name = "EPMS Inc." }]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "pywin32>=305; platform_system=='Windows'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
epms-agent = "epms_agent.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["epms_agent*"]
